--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,14 @@ h1 {
     -webkit-text-stroke: 1px black;
 }
 
-p {
+div #player1-score {
     color: whitesmoke;
-    font-size: 50px;
-    display: contents;
+    font-size: 50px;  
+}
+
+div #player2-score {
+    color: whitesmoke;
+    font-size: 50px;  
 }
 
 .horde {
