--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     width: 960px;
     text-align: center;
     margin: 0 auto;
-    background-image: url('../images/dalaran.webp');
+    background-image: url('../images/griffon.gif');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -55,11 +55,14 @@ div .player2 {
 h1 {
     color: yellow;
     -webkit-text-stroke: 1px black;
+
+    animation: swing;
+    animation-duration: 2s;
 }
 
 div #player1-score {
     color: whitesmoke;
-    font-size: 50px;  
+    font-size: 50px;
 }
 
 div #player2-score {
@@ -67,8 +70,24 @@ div #player2-score {
     font-size: 50px;  
 }
 
+.player2 h1 {
+    color: yellow;
+    -webkit-text-stroke: 1px blue;
+
+    animation: lightSpeedInRight;
+    animation-duration: 2s;    
+}
+
+.player1 h1 {
+    color: red;
+    -webkit-text-stroke: 1px black;  
+    
+    animation: lightSpeedInLeft;
+    animation-duration: 2s;
+}
+
 .horde {
-    background-image: url('../images/Horde.jpeg');
+    background-image: url('../images/Horde_Crest.png');
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -77,4 +96,9 @@ div #player2-score {
     background-image: url('../images/Alliance.ico');
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+.flip {
+    animation: flip;
+    animation-duration: 2s;
 }
