--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-:root {
-    --cell-size: 100px;
-}
-
 body {
     width: 960px;
     text-align: center;
@@ -15,21 +11,13 @@ body {
     height: 70%;
     padding: 50px 0px 30px 0px;
     display: inline-grid;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
     grid-template-columns: repeat(3, auto);
 }
 
 .cell {
-    width: var(--cell-size);
-    height: var(--cell-size);
+    width: 100px;
+    height: 100px;
     border: 1px solid whitesmoke;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
     cursor: pointer;
 }
 
@@ -74,7 +62,7 @@ div #player2-score {
     color: yellow;
     -webkit-text-stroke: 1px blue;
 
-    animation: lightSpeedInRight;
+    animation: lightSpeedInRight; /* Makes the player2 come in from the right */
     animation-duration: 2s;    
 }
 
@@ -82,7 +70,7 @@ div #player2-score {
     color: red;
     -webkit-text-stroke: 1px black;  
     
-    animation: lightSpeedInLeft;
+    animation: lightSpeedInLeft; /* Makes the player2 come in from the left */
     animation-duration: 2s;
 }
 
@@ -101,4 +89,8 @@ div #player2-score {
 .flip {
     animation: flip;
     animation-duration: 2s;
+}
+
+div {
+    display: block;
 }
